--- a/customerservice/pom.xml
+++ b/customerservice/pom.xml
@@ -48,6 +48,13 @@
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-config-client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+
 
 	</dependencies>
 
