--- a/customerservice/src/main/resources/application.properties
+++ b/customerservice/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-#Local MongoDB config
-#spring.data.mongodb.authentication-database=admin
-#spring.data.mongodb.username=root
-#spring.data.mongodb.password=root
-spring.data.mongodb.database=test
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
-
-#set up the web server's port to
-server.port=8081
+spring.application.name=customerservice
+spring.config.import=configserver:http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.username=user
+spring.cloud.config.password=111111
