--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-#none: The default for MySQL. No change is made to the database structure.
-#update: Hibernate changes the database according to the given entity structures.
-#create: Creates the database every time but does not drop it on close.
-#create-drop: Creates the database and drops it when SessionFactory closes.
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=maria
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-#mysql -u maria -p
+
+spring.application.name=customerservice
+spring.config.import=configserver:http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.username=user
+spring.cloud.config.password=111111
 
