--- a/config-data/productservice.properties
+++ b/config-data/productservice.properties
@@ -7,6 +7,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=maria
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql=true
 #mysql -u maria -p
 server.port=8082
