set up eureka clients by adding related dependencies, and specify the location of the eureka server for them

--- a/config-data/customerservice.properties
+++ b/config-data/customerservice.properties
@@ -5,6 +5,8 @@
 spring.data.mongodb.database=test
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
-
 #set up the web server's port to
 server.port=8081
+# configurate the micro service's registration server
+# this microservice instance will be registered to the following server
+eureka.client.serviceUrl.defaultZone=http://localhost:8099/eureka/
