--- a/config-data/shoppingservice.properties
+++ b/config-data/shoppingservice.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #mysql -u maria -p
 server.port=8083
+# configurate the micro service's registration server
+# this microservice instance will be registered to the following server
+eureka.client.serviceUrl.defaultZone=http://localhost:8099/eureka/
