--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-
-spring.application.name=customerservice
+#this name should be the same as the configuration file name in your file repository
+spring.application.name=productservice
 spring.config.import=configserver:http://localhost:8888
 #spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.username=user
