--- a/customerservice/pom.xml
+++ b/customerservice/pom.xml
@@ -54,6 +54,13 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>3.1.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
+		<!--this for connecting to eureka server for micro service registration-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.4</version>
+		</dependency>
 
 
 	</dependencies>
